# PETL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt  setup.py
demo/: d01_set_geometry.py  d02_bin_and_reconstruct.py
docs/: docs_requirements.txt
docs/source/: conf.py  filters.rst  geometry.rst  index.rst  install.rst  reconstruction.rst  simulation.rst  utility_functions.rst  volume.rst
etc/: build.sh
src/: CMakeLists.txt  allocate.cpp  allocate.h  analytic_ray_tracing.cpp  analytic_ray_tracing.h  analytic_ray_tracing_gpu.cu  analytic_ray_tracing_gpu.cuh  binning.cpp  binning.h  cuda_utils.cu  cuda_utils.cuh  data_cube.cpp  data_cube.h  list_mode_queue.cpp  list_mode_queue.h  list_of_models.cpp  list_of_models.h  median_filter.cu  median_filter.cuh  parameters.cpp  parameters.h  petl.cpp  petl.h  petl_c_interface.cpp  petl_c_interface.h  petl_defines.h  petl_server.py  petx_server.py  pfdr.cu  pfdr.cuh  phantom.cpp  phantom.h  planogram.cpp  planogram.h  projectors.cu  projectors.cuh  ramp_filter.cu  ramp_filter.cuh  relative_differences.cu  relative_differences.cuh  (+4 more)
